Research statement: organize to sections, flow

--- a/statements/statement_research.tex
+++ b/statements/statement_research.tex
@@ -12,46 +12,91 @@
 \begin{document}
 
 I use simple mechanistic models and modern statistical inference 
-methods to explore dynamical systems in nature, particularly 
-populations of organisms. 
-Natural populations are irreducibly composed of 
-individual organisms, while often conserved dynamics best 
-described in aggregate, such as population growth and migration.  
-A central focus of my 
-research is this interface between deterministic
-mean-field dynamics and fully stochastic individual-based dynamics.  
-Simple mechanistic population models, such as continuous-time 2-species 
-predator-prey models, neglect biological realism in favor of 
-analytic tractablility, while agent-based models often   
-obscure mechanistic relationships between cause and effect.
+methods to explore natural dynamical systems.
+To date, the central focus of my research has been the interface 
+between deterministic and stochastic dynamics. 
+An organizing principle of my research is to employ both data and models 
+together.  
+My goal is to use the simplest mechanistic models and inferences 
+method available to identify causal determinants of aggregate 
+system behavior.
 
-An organizing principle of my work is to employ both data and models 
-together. In my role as a data-driven researcher, I rely on time-tested
+To date, my research has focused primarily on biotic populations
+of organisms that cause or transmit human diseases.  My work has 
+encompassed a range of natural systems, 
+including human microparasites such as measles,
+and disease vectors such as the mosquito 
+\em{Aedes aegypti}.  In addition, I have extensive 
+experience incorporating abiotic dynamics such as weather
+and hydrology.
+
+Natural populations are irreducibly composed of 
+organisms that exhibit a wide range of individual variation 
+and stochasticity.  This combination of discreteness and 
+stochasticity can have important dynamical consequences in
+small populations. In particular, both extinction and migration
+can hinge on the behaviors or outcomes of a very small
+number of individuals.
+Even so, as \em{processes}, extinction and migration are best
+described in aggregate as population-level outcomes. I employ 
+probabilistic, distributional approaches to bridge this
+gap between the particular (individual-level) and 
+the general (population-level).
+
+Natural abiotic systems exhibit stochasticity and 
+autocorrelation on a wide range of scales that, in turn,
+influence biotic systems. From the simple influences of 
+seasonality to more complex dynamics such as growth, 
+maturation, and reproduction, the 
+
+Choosing an appropriate level of mechanistic modeling is a key 
+challenge in all sciences.  Here, for example, a
+deterministic model such as a continuous-time 
+2-species predator-prey model (analogous to a frictionless pendulum) 
+neglects biological realism in favor of 
+analytic tractablility.  On the other hand, a highly detailed 
+and potentially more realistic agent-based model
+can be inherently too complex to identify mechanistic links 
+between cause and effect.  My work favors an intermediate 
+level of modeling that explicitly includes stochasticity and 
+discreteness, while favoring memoryless Markovian dynamics of 
+classic differential equations models over  
+more complex state-dependent dynamics.
+
+Elucidating interactions between the individual-level and 
+population-level is a fertile area of scientific 
+inquiry that has been greatly facilitated by modern tools.
+Novel computational methods and hardware ease model 
+development and simulation, while citizen science, remote
+sensing tools, and novel genomic methods have accelerated
+data collection. As such, a rich trove of both data and 
+tools are now available to explore pressing modern concerns
+in population dynamics, including disease elimination, 
+pest control, native species extinction, 
+and non-native species 
+invasion.  Consequently, the ability to rapidly 
+integrate novel datasets and mechanistic simulations 
+is more important now than ever before.
+
+\section*{Tools}
+In my role as a data-driven researcher, I rely on time-tested
 computational tools such as SQL and R to rapidly organize and visualize
 large quantities of data.  This allows me to rapidly construct statistical
 models, while integration of R and C++ allows me to quickly construct and 
 assess mechanistic models.  
 
-My goal work is to use the simplest model or method available that 
-faithfully represents the system at hand.  
-
-My research encompasses a range of natural systems and methods.  
-
-The overarching goal of my work is, of course, to unveil the causal 
-determinants of each system's aggregate behavior.  Sometimes, as 
-with disease persistence and extinction, the 
-effects of stochasticity and discreteness dominate.
-
+\section*{Summary}
+The overarching goal of my work is to unveil the causal 
+determinants of each system's aggregate behavior, which in
+turn is an interplay between randomness and determinism.
 My work draws inspiration both from Robert May, who popularized  
 the fact that ``simple models can display complex behaviors'', 
 and from macroecology and information theory, which describe how 
 predictable, low-dimensional patterns can emerge from the 
-aggregate dynamics of complex systems.  
-
-Example mechanistic models include coupled 
-systems of epidemiologic compartment (``SIR'') models
-
-
+aggregate dynamics of complex systems.  I seek to reconcile
+these approaches: I use simple probabilistic metrics to 
+describe natural systems, and use simple mechanistic 
+models to explain their complex behaviors.
 
 
 %\maketitle
