Minor edits to research statement.

--- a/cv/cv_201609.tex
+++ b/cv/cv_201609.tex
@@ -30,7 +30,7 @@
 \pagestyle{fancy}
 
 \name{Christian E. Gunning} % Your name
-\address{(706)~224-7627 \\ http://www.x14n.org \\ research@x14n.org} % Your phone number and email
+\address{(706)~224-7627 \\ www.x14n.org \\ research@x14n.org} % Your phone number and email
 %\address{307 A Princeton SE \\ Albuquerque, NM 87106} % Your address
 %Updated \todoy
 
@@ -45,14 +45,18 @@
 
 \begin{rSection}{Background}
 %\begin{itemize}
-\item My research employs a dynamical systems interpretation of population and
-community ecology, with a focus on discrete, stochastic systems and processes. I
-use empirical data, numerical simulations, and modern statistical methods to
+\item 
+My research examines the spatiotemporal dynamics of population ecology, 
+with a focus on systems and processes that are discrete, stochastic,
+and non-linear. As a quantitative ecologist, I draw 
+inspiration and methodology from a range of disciplines, including 
+chemistry, physics, and mathematics.
+I use empirical data, numerical simulations, and modern statistical methods to
 identify key determinants of population dynamics.  I am particularly interested
 in stochastic extinction and persistence, population response to
-human perturbations, and demographic founder events such
-as colonization and development of resistance. My study systems include 
-childhood diseases in the pre-vaccine era U.S.\, and mosquito population 
+perturbation, and demographic founder events such
+as colonization and development of resistance. At present, my study systems 
+include childhood diseases in the pre-vaccine era U.S.\, and mosquito population 
 dynamics in Iquitos, Peru.
 
 \item My research is facilitated by cutting-edge quantitative tools:
