Edits from nat, typesetting.

--- a/cv/cv_201609.tex
+++ b/cv/cv_201609.tex
@@ -25,9 +25,12 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 %% footer
 \usepackage{fancyhdr}
-% clear old, activate new footer
-\fancyhf{} 
 \pagestyle{fancy}
+\fancyhf{} 
+\renewcommand{\headrulewidth}{0pt}
+\rfoot{C.E. Gunning, Page \thepage}
+% clear old, activate new footer
+%\pagestyle{fancy}
 
 \name{Christian E. Gunning} % Your name
 \address{(706)~224-7627 \\ www.x14n.org \\ research@x14n.org} % Your phone number and email
@@ -36,14 +39,12 @@
 
 \begin{document}
 
-%% footer
-\rfoot{C. E. Gunning, Page \thepage}
 %----------------------------------------------------------------------------------------
 %	EDUCATION SECTION
 %----------------------------------------------------------------------------------------
 
 
-\begin{rSection}{Background}
+\begin{rSection}{Executive Summary}
 %\begin{itemize}
 \item 
 My research examines the spatiotemporal dynamics of population ecology, 
@@ -77,15 +78,13 @@ and reproducible research methods.
 {\bf University of New Mexico, Albuquerque} \hfill {\em Summer 2014} \\ 
 Ph.D. with Distinction in Biology (Disease Ecology with concentration in
 Integrative Biology) \\
-Advisor: Dr. Helen J. Wearing\\
-Committee: Drs. Jim Brown, Melanie Moses, and Erik Erhardt\\
-Title: Population and Metapopulation Ecology of
-Childhood Diseases in the pre-vaccine era United States
+Committee: Drs. Helen J. Wearing (advisor), Jim Brown, Melanie Moses, and Erik Erhardt\\
+Title: Population and metapopulation ecology of childhood diseases in the pre-vaccine era United States
 
 {\bf University of New Mexico, Albuquerque} \hfill {\em Fall 2009} \\ 
 Masters of Water Resources (Riparian Hydroecology) \\
 Advisors: Drs. Bruce Thomson and Roy Jemison \\
-Title: Estimating Phreatophyte Evapotranspiration from Diel Groundwater Fluctuations in the Middle Rio Grande Bosque
+Title: Estimating pHreatophyte evapotranspiration from diel groundwater fluctuations in the Middle Rio Grande Bosque
 
 {\bf University of Georgia, Athens} \hfill {\em Fall 2001} \\ 
 Bachelor of Science, Biochemistry and Molecular Biology \\
@@ -93,7 +92,27 @@ Advisor: Dr. James Omichinski
 \end{rSection}
 
 
-\begin{rSection}{Publications}
+\begin{rSection}{Peer-Reviewed Publications}
+
+C. Andris, D. Lee, M.J.  Hamilton, M. Martino, {\bf C.E. Gunning},  J.A. Selden (2015).
+The Rise of Partisanship and Super-cooperators in the US House of Representatives.
+PLoS ONE, 10(4), e0123507.
+
+{\bf C.E. Gunning}, E. Erhardt, H.J. Wearing (2014). 
+Conserved patterns of incomplete reporting in pre-vaccine era childhood diseases.
+Proceedings of the Royal Society B 281(1794), 20140886. 
+
+{\bf C.E. Gunning} \& H.J. Wearing. Probabilistic measures of persistence
+and extinction in measles (meta)populations (2013).  Ecology Letters 16(8), 985-994.
+
+D.M. Smith, D.M. Finch, {\bf C.E. Gunning}, R. Jemison, J.F. Kelly (2009). Post-wildfire recovery of riparian vegetation during a period of water scarcity in the Southwestern USA. Fire Ecology 5(1), 38-55.
+\end{rSection}
+
+\begin{rSection}{Pending Publications}
+
+M.R. Vella, {\bf C.E. Gunning}, A.L. Lloyd, F. Gould.
+Evaluating strategies for reversing CRISPR-Cas9 gene drives.
+Nature Biotechnology, In Review.
 
 {\bf C.E. Gunning}, K. Okamoto, H. Astete, G.M. Vasquez, E. Erhardt, 
 C. Del Aguila, R. Pinedo, R. Cardenas, C. Pacheco, E. Chalco, 
@@ -104,32 +123,44 @@ in Iquitos, Peru. In Prep.
 {\bf C.E. Gunning}, M.J Ferrari, E. Erhardt, H.J. Wearing.
 Evidence of cryptic incidence in childhood diseases. In Prep.
 
-M.R. Vella, {\bf C.E. Gunning}, A.L. Lloyd, F. Gould.
-Evaluating strategies for reversing CRISPR-Cas9 gene drives.
-Nature Biotechnology, In Review.
-
-C. Andris, D. Lee, M.J.  Hamilton, M. Martino, {\bf C.E. Gunning},  J.A. Selden (2015).
-The Rise of Partisanship and Super-cooperators in the US House of Representatives.
-PLoS ONE, 10(4), e0123507.
-
-{\bf C.E. Gunning}, E. Erhardt, H.J. Wearing (2014). 
-Conserved patterns of incomplete reporting in pre-vaccine era childhood diseases.
-Proc. Roy. Soc. B. 281(1794), 20140886. 
-
-{\bf C.E. Gunning} \& H.J. Wearing. Probabilistic measures of persistence
-and extinction in measles (meta)populations (2013).  Ecology Letters 16(8), 985-994.
-
-D.M. Smith, D.M. Finch, {\bf C.E. Gunning}, R. Jemison, J.F. Kelly (2009). Post-wildfire recovery of riparian vegetation during a period of water scarcity in the Southwestern USA. Fire ecology 5(1), 38-55.
 \end{rSection}
 
-\begin{rSection}{Grants and Awards}
-\item Apr 2013 (\$500). UNM Biology Department Scholarship.
-\item Apr 2013. Graduate oral presentation, $2^{nd}$ place. UNM Biology Research Day.
+\begin{rSection}{Research Experience}
+
+\begin{rSubsection}{Post-doctoral Researcher}{Oct 2014 - Present}{Departments of
+Entomology and Mathematics, NCSU}{Raleigh, NC}
+\item Statistical analysis of {\em Aedes aegypti} field spraying trials in Iquitos, Peru
+\item Continue development of Skeeter Buster of {\em Aedes aegypti} population dynamics simulation model
+\item Mentor graduate students
+\end{rSubsection}
+
+\begin{rSubsection}{Research Assistant}{Jan 2010 - Oct 2014}{Wearing Lab, UNM Biology}{Albuquerque, NM}
+\item Conduct original research for publication and assist with grant writing
+\item Systems administrator and data manager
+\item Undergraduate training and mentorship
+\end{rSubsection}
+
+\begin{rSubsection}{Hydrology Research Technician}{Jan 2006 - Jan 2009}{Rocky
+Mountain Research Station, U.S. Forest Service}{Albuquerque, NM}
+\item Conduct original research and prepare technical reports for U.S. Forest Service
+\item Collect and managed environmental monitoring data 
+\end{rSubsection}
+
+\begin{rSubsection}{Plant Genetics Lab Technician}{Jun 2003 - Jun 2004}{Malmberg Lab, UGA Plant Biology}{Athens, GA}
+\item Isolated DNA, Conducted PCR
+\item Design data entry and management system
+\end{rSubsection}
+
+\begin{rSubsection}{NMR Lab Technician}{Jan 2001 - Jun 2002}{Omichinski Lab, UGA
+Biochemistry and Molecular Biology}{Athens, GA}
+\item Administer mixed Unix workstation cluster
+\item Evaluate linux hardware/software for high-performance NMR data visualization
+\end{rSubsection}
+\end{rSection}
+
+\begin{rSection}{Grants}
 \item Jun 2011 (\$2,000). UNM PiBBS Student Enrichment Opportunities Grant to
-attend SFI Complex Systems Summer School.
 \item May 2010 (\$500). EEID Conference Workshop travel grant.
-\item Apr 2010 (\$500). UNM SRAC travel grant to attend useR2010.
-\item Apr 2010.  Graduate poster presentation, $1^{st}$ place. UNM Biology Research Day.
 \item Mar 2010 (\$80,000). Center for Evolutionary \& Theoretical Immunology (CETI) Seed
 Grant, Waning Immunity in Influenza and Whooping Cough,
 Contributing author.
@@ -137,6 +168,14 @@ Contributing author.
 Sciences (PIBBS) 2 year fellowship.
 \item May 2007 (\$4,400). UNM Graduate Research and Development grant, Hydrological
 research in the Middle Rio Grande Bosque. 
+\end{rSection}
+
+\begin{rSection}{Awards}
+\item Apr 2013 (\$500). UNM Biology Department Scholarship.
+\item Apr 2013. Graduate oral presentation, $2^{nd}$ place. UNM Biology Research Day.
+attend SFI Complex Systems Summer School.
+\item Apr 2010 (\$500). UNM SRAC travel grant to attend useR2010.
+\item Apr 2010.  Graduate poster presentation, $1^{st}$ place. UNM Biology Research Day.
 \end{rSection}
 
 \begin{rSection}{Contributed Talks}
@@ -176,33 +215,34 @@ in the Middle Rio Grande Bosque, Water Year 2006. National
 Groundwater Association (NGWA) Conference. Albuquerque, NM. May 2007. 
 \end{rSection}
 
-
+\clearpage
 %------------------------------------------------
 \begin{rSection}{Teaching}
-\begin{rSubsection}{Theoretical Ecology}{Spring 2015, University of Montana}{}{}
-\item Guest lecturer, student facilitator
-\end{rSubsection}
+\subhead{Instructor}
 \begin{rSubsection}{Probability for Scientists}{Fall 2013, UNM Biology}{}{}
 \item Course designer, lead instructor
 \item Mixed undergraduate/graduate course (primarily undergraduate)
 \item Hands-on course covering introductory probability, statistics, and data analysis
 \end{rSubsection}
+\subhead{Teaching Assistant}
+\begin{rSubsection}{Biology for Non-majors}{Spring 2014}{}{}
+\nullitem
+\end{rSubsection}
 \begin{rSubsection}{Statistical Programming}{Spring 2013, UNM Statistics}{}{}
-\item Teaching assistant, guest lecturer
 \item Mixed undergraduate/graduate course (primarily graduate)
+\item Also guest lectured
 \end{rSubsection}
-\begin{rSubsection}{Ecology Workshop}{May 2010, Univ. of Michigan}{}{}
-\item Teaching assistant
-\item Workshop was part of the annual Ecology and Evolution of Infectious
-Disease conference
+\begin{rSubsection}{Genetics}{Spring 2009, UNM Biology}{}{}
+\nullitem
 \end{rSubsection}
-\begin{rSubsection}{Undergraduate Biology Courses (various)}{2008, 2009, 2014, UNM Biology}{}{}
-\item Teaching assistant for: Ecology \& Evolution; Genetics; and Biology for
-Non-majors.
+\begin{rSubsection}{Ecology \& Evolution}{Fall 2008, UNM Biology}{}{}
+\item Assisted in writing course material
 \end{rSubsection}
-\end{rSection}
-
-\begin{rSection}{Mentoring}
+\subhead{Guest Lecturer}
+\begin{rSubsection}{Theoretical Ecology}{Spring 2015, University of Montana}{}{}
+\item Also assisted students with R
+\end{rSubsection}
+\subhead{Workshops and Training}
 \begin{rSubsection}{Computational Skills for Scientists Training Workshop}{Aug 2016, Univ. of Montana}{}{}
 \item Guest lecturer
 \end{rSubsection}
@@ -216,54 +256,25 @@ Non-majors.
 \item Organized and led weekly R programming group
 \item Participants included undergraduate and graduate students and professors
 \end{rSubsection}
-\begin{rSubsection}{Mentees}{}{}{}
+\begin{rSubsection}{Ecology Workshop}{May 2010, Univ. of Michigan}{}{}
+\item Teaching assistant
+\item NSF-funded graduate training program, part of Ecology and Evolution of Infectious
+Disease conference
+\end{rSubsection}
+\end{rSection}
+
+\begin{rSection}{Mentoring}
 \item Spring 2015 - present. Robert Liberatore, Math Education Software Developer
 \item Fall 2015 - present. Michael Vella, NCSU Mathematics Ph.D. Student
 \item Fall 2015 - Fall 2016. Gabriel Zilnik, NCSU Entomology Masters Student
 \item Spring 2011 - Spring 2012. Nathan Cournoyer, UNM Biology Undergraduate Student
-\end{rSubsection}
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Research Experience}
 
-\begin{rSubsection}{Post-doctoral Researcher}{Oct 2014 - Present}{Departments of
-Entomology and Mathematics, NCSU}{Raleigh, NC}
-\item Statistical analysis of field trial results
-\item Continue support and development of stochastic \& spatially explicit
-C++ simulation of \em{Aedes aegypti} in Iquitos, Peru.
-\item Mentor graduate students
-\end{rSubsection}
-
-\begin{rSubsection}{Research Assistant}{Jan 2010 - Oct 2014}{Wearing Lab, UNM Biology}{Albuquerque, NM}
-\item Conduct original research for publication
-\item Assist with grant writing
-\item Systems administrator and data manager
-\item Mentor undergraduates
-\end{rSubsection}
-
-\begin{rSubsection}{Hydrology Research Technician}{Jan 2006 - Jan 2009}{Rocky
-Mountain Research Station, U.S. Forest Service}{Albuquerque, NM}
-\item Conduct original research and prepare technical reports for U.S. Forest Service
-\item Collect and managed environmental monitoring data 
-\end{rSubsection}
-
-\begin{rSubsection}{Plant Genetics Lab Technician}{Jun 2003 - Jun 2004}{Malmberg Lab, UGA Plant Biology}{Athens, GA}
-\item Isolated DNA, Conducted PCR
-\item Design data entry and management system
-\end{rSubsection}
-
-\begin{rSubsection}{NMR Lab Technician}{Jan 2001 - Jun 2002}{Omichinski Lab, UGA
-Biochemistry and Molecular Biology}{Athens, GA}
-\item Administer mixed Unix workstation cluster
-\item Evaluate linux hardware/software for high-performance NMR data visualization
-\end{rSubsection}
-\end{rSection}
-
-\clearpage
 
 \begin{rSection}{Conferences and Professional Events}
 \item Sep 2015. Society of Vector Ecology Conference.  Albuquerque, NM.
