Minor edits to diversity statement

--- a/statements/statement_diversity.tex
+++ b/statements/statement_diversity.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 %\usepackage{url}
 \usepackage{hyperref}
 \usepackage[numbers, sort&compress]{natbib}
@@ -7,14 +8,14 @@
 %\usepackage{multicol}
 
 \author{Christian Gunning}
-\title{Activities contributing to diversity, equity and inclusion in academia}
+\title{Activities contributing to\\diversity, equity and inclusion in academia}
 \date{\today}
 \begin{document}
-
+\maketitle
 %% a statement of activities contributing to diversity, equity and inclusion in Academia
 
 My approach to fostering equity and inclusion in academia 
-is rooted in the so-called ''imposter syndrome''.  When surrounded by 
+is rooted in the so-called ``imposter syndrome''.  When surrounded by 
 teachers and mentors who look and act like us, it's easy to 
 see ourselves {\em becoming} them.  Yet lacking such supportive 
 social and environmental queues, we often respond with excessively
@@ -23,7 +24,7 @@ excel at self-criticism to their own detriment.
 As an educator and mentor, I see my role as helping
 bridge this confidence gap.
 
-In the fight against ``imposter syndrome'', I view three 
+In the fight against imposter syndrome, I view three 
 elements as crucial: enthusiasm, competence, and ownership.
 First, employing hands-on
 activities and salient modern-day examples helps build student engagement.
@@ -43,15 +44,15 @@ education, to self-confidence and access to social capital.
 In short, the process of learning can be especially challenging
 for working parents, returning veterans, or individuals who
 lack community support. In my experience, expressing an 
-appreciation for the challenges many students must confront
-simply to {\em arrive} at each class can increase students'
-comfort levels, freeing them to take ownership of their education.
-In addition, I encourage students to connect with each other, 
+appreciation of the challenges less privileged students confront
+simply to arrive in the classroom can increase students'
+comfort levels, freeing them to take ownership of their educations.
+I also encourage students to connect with each other,
 and to proactively seek support.
 
 Ultimately, increasing academic diversity and inclusion must 
 come largely from {\em maintaining} diversity, and pushing back
-against a culture of {\em exclusion}. At every career stage, a
+against a culture of exclusion. At every career stage, a
 significant attrition of diversity has long been 
 evident. A culture of inclusion begins first with a sense of 
 purpose and belonging. I seek to foster such an inclusive 
