Add references, update pdf

--- a/cv/cv_201609.tex
+++ b/cv/cv_201609.tex
@@ -313,6 +313,27 @@ distribution estimation.
 \item 2009-2012. Maintainer of \texttt{Rwave}: R package for continuous wavelet transforms.
 \item 2010-2011. Contributor to \texttt{xts} and \texttt{zoo}: R packages for time series handling and analysis.
 \end{rSection}
+
+
+\begin{rSection}{References}
+\begin{rSubsection}{Alun Lloyd}{}{Department of Mathematics}{North Carolina State University}
+\item email: alun\_lloyd@ncsu.edu
+\item phone:  919.515.1910
+\end{rSubsection}
+\begin{rSubsection}{Fred Gould}{}{Department of Entomology \& Plant Pathology}{North Carolina State University}
+\item email: fred\_gould@ncsu.edu
+\item phone: 919.515.1647 
+\end{rSubsection}
+\begin{rSubsection}{Helen Wearing}{}{Department of Biology, Department of Mathematics and Statistics}{University of New Mexico}
+\item email: hwearing@math.unm.edu
+\item phone: 505.277.0357
+\end{rSubsection}
+\begin{rSubsection}{Erik Erhardt}{}{Department of Mathematics and Statistics}{University of New Mexico}
+\item email: erike@stat.unm.edu
+\item phone: 505.750.4424
+\end{rSubsection}
+\end{rSection}
+
 %----------------------------------------------------------------------------------------
 %	EXAMPLE SECTION
 %----------------------------------------------------------------------------------------
