Start on teaching statement
* Minor formatting to diversity, CV
* .gitignore

--- a/statements/statement_diversity.tex
+++ b/statements/statement_diversity.tex
@@ -8,11 +8,14 @@
 %\usepackage{multicol}
 
 \author{Christian Gunning}
+%% a statement of activities contributing to diversity, equity and inclusion in Academia
 \title{Activities contributing to\\diversity, equity and inclusion in academia}
-\date{\today}
+\date{}
+
 \begin{document}
 \maketitle
-%% a statement of activities contributing to diversity, equity and inclusion in Academia
+\thispagestyle{empty}
+\linespread{1.25}\selectfont
 
 My approach to fostering equity and inclusion in academia 
 is rooted in the so-called ``imposter syndrome''.  When surrounded by 
